style.css
:root {
    --primary-light: #f8fafc;
    --primary-dark: #1e293b;
    --primary-accent: #475569;
}
* {
    margin: 0;
    padding: 0;
}
body {
    font-family: 'Roboto', sans-serif;
    font-size: 1.75rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--primary-light);
    color: var(--primary-dark);
}
header {
    width: 100%;
    height: 75px;
    padding: 25px 0;
    font-family: 'Alfa Slab One', cursive;
    font-size: 48px;
    letter-spacing: 5px;
    background-color: var(--primary-accent);
    color: var(--primary-light);
    display: flex;
    justify-content: center;
    align-items: center;
}
.body {
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 25px;
}
.title {
    font-family: 'Alfa Slab One', cursive;
    font-size: 36px;
    letter-spacing: 5px;
    margin: 75px 0 25px 0;
}
.game-board {
    height: 200px;
    margin: 50px 0 50px 0;
    display: flex;
    align-items: center;
    gap: 100px;
}
.player-tag {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}
.computer-tag {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}
#computer-input,
#player-input {
    width: 5rem;
    height: 5rem;
}
#computer-score,
#player-score {
    font-size: 50px;
}
.button {
    margin-top: 25px;
    width: 5rem;
    height: 5rem;
}
footer {
    width: 100%;
    position: fixed;
    bottom: 0;
    font-size: 1.25rem;
    text-align: center;
    background-color: var(--primary-accent);
    color: var(--primary-light);
}
a {
    text-decoration: none;
    color: var(--primary-light);
}

